# medlinx-test

./: CMakeLists.txt  main.cpp  main.qml  message.h  messagemodel.cpp  messagemodel.h  readme.md  serialreader.cpp  serialreader.h
emulator/: ttyUSB0_emulator.py
